this will change the gaps at either side of the menu to what they were before and also fix the gap at the top so it doesnt change between screen sizes

--- a/styles.css
+++ b/styles.css
@@ -405,9 +405,9 @@ h4 {
   display: flex;
   flex-direction: column;
   align-items: end;
-  padding-left:1.125rem;
-  padding-right:1.125rem;
-  margin-top:18vh;
+  padding-left:1rem;
+  padding-right:1rem;
+  margin-top:4rem;;
 }
 
 #triangle-topright {
